# cmd/rekor-server/app/serve.go
@@ -36,8 +36,6 @@ import (
 	alpine_v001 "github.com/Morrison76/rekor/pkg/types/alpine/v0.0.1"
 	"github.com/Morrison76/rekor/pkg/types/cose"
 	cose_v001 "github.com/Morrison76/rekor/pkg/types/cose/v0.0.1"
-	"github.com/Morrison76/rekor/pkg/types/dsse"
-	dsse_v001 "github.com/Morrison76/rekor/pkg/types/dsse/v0.0.1"
 	hashedrekord "github.com/Morrison76/rekor/pkg/types/hashedrekord"
 	hashedrekord_v001 "github.com/Morrison76/rekor/pkg/types/hashedrekord/v0.0.1"
 	"github.com/Morrison76/rekor/pkg/types/helm"
@@ -53,9 +51,8 @@ import (
 	rfc3161_v001 "github.com/Morrison76/rekor/pkg/types/rfc3161/v0.0.1"
 	"github.com/Morrison76/rekor/pkg/types/rpm"
 	rpm_v001 "github.com/Morrison76/rekor/pkg/types/rpm/v0.0.1"
-	"github.com/Morrison76/rekor/pkg/types/tuf"
-	tuf_v001 "github.com/Morrison76/rekor/pkg/types/tuf/v0.0.1"
-    participantrecord "github.com/Morrison76/rekor/pkg/types/participantrecord"
+    "github.com/Morrison76/rekor/pkg/types/participantrecord"
+    participantrecord_v001 "github.com/Morrison76/rekor/pkg/types/participantrecord/v0.0.1"
 )
 
 // serveCmd represents the serve command
@@ -114,11 +111,8 @@ var serveCmd = &cobra.Command{
 			rfc3161.KIND:      {rfc3161_v001.APIVERSION},
 			alpine.KIND:       {alpine_v001.APIVERSION},
 			helm.KIND:         {helm_v001.APIVERSION},
-			tuf.KIND:          {tuf_v001.APIVERSION},
 			hashedrekord.KIND: {hashedrekord_v001.APIVERSION},
-			dsse.KIND:         {dsse_v001.APIVERSION},
-			participantrecord.KIND: { participantrecord.APIVERSION}
-			"rekordtest": []string{"github.com/Morrison76/rekor/pkg/types/rekordtest"},
+			participantrecord.KIND: { participantrecord_v001.APIVERSION},
 		}
 		for k, v := range pluggableTypeMap {
 			log.Logger.Infof("Loading support for pluggable type '%v'", k)
