# pkg/generated/models/dsse.go
@@ -1,194 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"bytes"
-	"context"
-	"encoding/json"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// Dsse DSSE envelope
-//
-// swagger:model dsse
-type Dsse struct {
-
-	// api version
-	// Required: true
-	// Pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
-	APIVersion *string `json:"apiVersion"`
-
-	// spec
-	// Required: true
-	Spec DsseSchema `json:"spec"`
-}
-
-// Kind gets the kind of this subtype
-func (m *Dsse) Kind() string {
-	return "dsse"
-}
-
-// SetKind sets the kind of this subtype
-func (m *Dsse) SetKind(val string) {
-}
-
-// UnmarshalJSON unmarshals this object with a polymorphic type from a JSON structure
-func (m *Dsse) UnmarshalJSON(raw []byte) error {
-	var data struct {
-
-		// api version
-		// Required: true
-		// Pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
-		APIVersion *string `json:"apiVersion"`
-
-		// spec
-		// Required: true
-		Spec DsseSchema `json:"spec"`
-	}
-	buf := bytes.NewBuffer(raw)
-	dec := json.NewDecoder(buf)
-	dec.UseNumber()
-
-	if err := dec.Decode(&data); err != nil {
-		return err
-	}
-
-	var base struct {
-		/* Just the base type fields. Used for unmashalling polymorphic types.*/
-
-		Kind string `json:"kind"`
-	}
-	buf = bytes.NewBuffer(raw)
-	dec = json.NewDecoder(buf)
-	dec.UseNumber()
-
-	if err := dec.Decode(&base); err != nil {
-		return err
-	}
-
-	var result Dsse
-
-	if base.Kind != result.Kind() {
-		/* Not the type we're looking for. */
-		return errors.New(422, "invalid kind value: %q", base.Kind)
-	}
-
-	result.APIVersion = data.APIVersion
-	result.Spec = data.Spec
-
-	*m = result
-
-	return nil
-}
-
-// MarshalJSON marshals this object with a polymorphic type to a JSON structure
-func (m Dsse) MarshalJSON() ([]byte, error) {
-	var b1, b2, b3 []byte
-	var err error
-	b1, err = json.Marshal(struct {
-
-		// api version
-		// Required: true
-		// Pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
-		APIVersion *string `json:"apiVersion"`
-
-		// spec
-		// Required: true
-		Spec DsseSchema `json:"spec"`
-	}{
-
-		APIVersion: m.APIVersion,
-
-		Spec: m.Spec,
-	})
-	if err != nil {
-		return nil, err
-	}
-	b2, err = json.Marshal(struct {
-		Kind string `json:"kind"`
-	}{
-
-		Kind: m.Kind(),
-	})
-	if err != nil {
-		return nil, err
-	}
-
-	return swag.ConcatJSON(b1, b2, b3), nil
-}
-
-// Validate validates this dsse
-func (m *Dsse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAPIVersion(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateSpec(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Dsse) validateAPIVersion(formats strfmt.Registry) error {
-
-	if err := validate.Required("apiVersion", "body", m.APIVersion); err != nil {
-		return err
-	}
-
-	if err := validate.Pattern("apiVersion", "body", *m.APIVersion, `^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$`); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *Dsse) validateSpec(formats strfmt.Registry) error {
-
-	if m.Spec == nil {
-		return errors.Required("spec", "body", nil)
-	}
-
-	return nil
-}
-
-// ContextValidate validate this dsse based on the context it is used
-func (m *Dsse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Dsse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Dsse) UnmarshalBinary(b []byte) error {
-	var res Dsse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
